2012-02-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c (instance_dispose): Improve debug message.

	* src/nact/nact-menubar-edit.c
	(nact_menubar_edit_on_update_sensitivities): Do not evaluate writability
	if an action is not selected.

	* src/nact/nact-menubar.c
	(nact_menubar_new, on_ui_manager_proxy_connect): Review code layout.

2012-02-14 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nautilus-actions-config-tool.ui: Remove halign property only
	avaliable since Gtk 3.0.

	* src/nact/base-gtk-utils.c (base_gtk_utils_table_to_grid):
	Improve table to grid conversion, adding spacing and expand properties.

	* src/nact/nautilus-actions-config-tool.ui: Updated accordingly.

	* src/nact/nact-menubar-edit.c (get_deletables):
	Check if action is writable when deleting a profile.

	* src/core/na-object-action.c (ifactory_object_read_done):
	* src/core/na-object-menu.c (ifactory_object_read_done):
	* src/core/na-object-profile.c (ifactory_object_read_done):
	No more dump still incomplete object.

	* src/core/na-boxed.c (string_list_from_void): Keep the source and the
	target string lists in the same order.

	* src/core/na-io-provider.c (na_io_provider_load_items): Fix comment.

	* src/nact/nact-main-window.h:
	* src/nact/nact-main-window.c
	(on_base_initialize_window, on_tree_view_selection_changed):
	* src/nact/nact-assistant-export.c (on_base_all_widgets_showed):
	* src/nact/nact-menubar.c (on_base_initialize_window):
	* src/nact/nact-tree-view.c (class_init, on_selection_changed):
	* src/nact/nact-tree-view.h:
	Get rid of TREE_SIGNAL_SELECTION_CHANGED signal, only using
	MAIN_SIGNAL_SELECTION_CHANGED one, based on the assertion that the
	NactMainWindow will be the first triggered handler.

	* src/nact/nact-tree-view.c (get_selected_items): Improve debug message.

	* src/nact/nact-menubar.c (instance_dispose,
	on_tree_view_selection_changed): Keeping a recursive ref on the current